@@ -1,5 +1,7 @@
 2010-08-31 S. Thiell <stephane.thiell@cea.fr>
 
+	* scripts/clush.py: Live per-line gathering (-bL mode) improvements.
+
 	* Task.py: Fixed Task.timer() when called from another thread - it used to
 	return None (trac ticket #112).
 
